--- a/.github/workflows/build_and_push_Dockerfile.yml
+++ b/.github/workflows/build_and_push_Dockerfile.yml
@@ -25,6 +25,11 @@ jobs:
           username: ${{ secrets.DOCKERFILEIMAGEBUILD_ACTION_DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERFILEIMAGEBUILD_ACTION_DOCKERHUB_TOKEN }}
 
+      - name: test
+        run: \
+            apt install tree \
+            tree
+
       - name: Build and push
         uses: docker/build-push-action@v4
         with:
