--- a/.github/workflows/build_and_push_Dockerfile.yml
+++ b/.github/workflows/build_and_push_Dockerfile.yml
@@ -26,9 +26,9 @@ jobs:
           password: ${{ secrets.DOCKERFILEIMAGEBUILD_ACTION_DOCKERHUB_TOKEN }}
 
       - name: test
-        run: \
-            apt install tree \
-            tree
+        run: |
+          apt-get install tree
+          tree
 
       - name: Build and push
         uses: docker/build-push-action@v4
