--- a/.github/workflows/build_and_push_Dockerfile.yml
+++ b/.github/workflows/build_and_push_Dockerfile.yml
@@ -27,7 +27,7 @@ jobs:
 
       - name: test
         run: |
-          apt-get install tree
+          sudo apt-get install -y tree
           tree
 
       - name: Build and push
