--- a/.github/workflows/build_and_push_Dockerfile.yml
+++ b/.github/workflows/build_and_push_Dockerfile.yml
@@ -33,8 +33,8 @@ jobs:
       - name: Build and push
         uses: docker/build-push-action@v4
         with:
-          context: .
+          context: ircporn/
           platforms: linux/amd64
-          file: ircporn/Dockerfile
+          file: Dockerfile
           push: true
           tags: magic848/pornserv:latest
